# CppEngine

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.bat  build.ninja  cmake_install.cmake  go.mod  run.bat  tests.cpp
header/: Camera.h  Camera.hpp  Color.hpp  Component.hpp  Constants.h  Constants.hpp  Engine.hpp  GameObjects.hpp  Geometry.h  Geometry.hpp  Graphics.h  Graphics.hpp  Keyboard.h  Keyboard.hpp  Matrix.h  Matrix.hpp  PhantomDeclarations.hpp  Rects.hpp  RootComponent.hpp  Scene.hpp  Script.h  Script.hpp  StandAloneObjects.hpp  Types.h  Types.hpp  Vectors.h  Vectors.hpp  WindowManager.h  WindowManager.hpp  X3D.h  X3D.hpp  util.h  util.hpp  x3dMath.h  x3dMath.hpp
src/: Camera.cpp  Color.cpp  Component.cpp  Geometry.cpp  Graphics.cpp  Keyboard.cpp  Matrix.cpp  Rects.cpp  RootComponent.cpp  Scene.cpp  Script..cpp  Script.cpp  Vectors.cpp  WindowManager.cpp  X3D.cpp  main.cpp  tests.cpp
